# cezzis-com-cocktails-aisearch

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  pytest.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  task-template.md  user-story-template.md
.github/workflows/: cezzis-cocktails-aisearch-cicd.yaml
.iac/argocd/: cezzis-com-cocktails-aisearch.yaml  image-updater.yaml
.iac/k8s/: configmap.yml  deployment.yml  external-secret.yml  external-secrets.yml  ingress.yml  kustomization.yaml  secret-store.yml  service.yml
.iac/terraform/: datasources.tf  keyvault-secrets.tf
.iac/terraform/environment_vars/: prd.tfvars
src/cezzis_com_cocktails_aisearch/: .env  app_module.py  main.py
src/cezzis_com_cocktails_aisearch/apis/: __init__.py  conversational_search.py  embedding.py  health_check.py  scalar_docs.py  semantic_search.py
src/cezzis_com_cocktails_aisearch/application/behaviors/: __init__.py
src/cezzis_com_cocktails_aisearch/domain/: __init__.py
src/cezzis_com_cocktails_aisearch/domain/config/: __init__.py  app_options.py  auth0_options.py  oauth_options.py  qdrant_options.py  reranker_options.py  splade_options.py
src/cezzis_com_cocktails_aisearch/infrastructure/repositories/: __init__.py  cocktail_vector_embedding_repository.py  cocktail_vector_repository.py  cocktail_vector_search_repository.py  icocktail_vector_embedding_repository.py  icocktail_vector_repository.py  icocktail_vector_search_repository.py
src/cezzis_com_cocktails_aisearch/infrastructure/services/: __init__.py  ireranker_service.py  isplade_service.py  reranker_service.py  splade_service.py
src/cezzis_com_cocktails_aisearch/routers/: __init__.py  semantic_search.py
src/cezzis_com_cocktails_aisearch/static/: query_synonym_expansions.json
test/: conftest.py
test/integration/: test_unit_main.py
test/unit/apis/: test_apis_init.py  test_embedding.py  test_scalar_docs.py  test_semantic_search.py
test/unit/application/: test_init.py
test/unit/application/behaviors/: test_behaviors_init.py
test/unit/domain/: test_domain_init.py
test/unit/infrastructure/: test_infrastructure_init.py
(+76 files in other folders)
